//
// this file is automatically generated
//
syntax = "proto3";
option java_generic_services = true;
option java_package = "org.marketcetera.strategy";
option java_outer_classname = "StrategyRpc";
import "rpc_base.proto";
import "rpc_paging.proto";
import "rpc_strategy_types.proto";

// request the loaded strategy instances
message ReadStrategyInstancesRequest {
    string sessionId = 1; // session id of the authenticated session
}

// return the loaded strategy instances
message ReadStrategyInstancesResponse {
    PageResponse pageResponse = 1;
    repeated StrategyInstance strategyInstances = 2;
}

// services for Strategy
service StrategyRpcService {
    rpc login(LoginRequest) returns (LoginResponse); // starts the session
    rpc logout(LogoutRequest) returns (LogoutResponse); // ends the session
    rpc heartbeat(HeartbeatRequest) returns (HeartbeatResponse); // keeps the session alive
    rpc getStrategyInstances(ReadStrategyInstancesRequest) returns (ReadStrategyInstancesResponse); // requests loaded strategy instances
}
