//
// this file is automatically generated
//
syntax = "proto3";
option java_generic_services = true;
option java_package = "org.marketcetera.strategy";
option java_outer_classname = "StrategyTypesRpc";
import "rpc_base.proto";
import "rpc_admin.proto";
import "google/protobuf/timestamp.proto";

// describes a loaded strategy
message StrategyInstance {
    User user = 1; // user that owns the strategy
    string name = 2; // uniquely describes the strategy
}
